--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,10 @@
 language: c
 compiler: gcc
-install: sudo modprobe msr
+install:
+  - sudo modprobe msr
+before_install:
+  - sudo apt-get update -qq
+  - apt-get install -y msr-tools
 dist: trusty
 sudo: required
 script:
@@ -15,3 +19,5 @@ script:
   - sudo chown root:root test-msr-access
   - sudo chmod u+s test-msr-access
   - ./test-msr-access
+  - rdmsr -p0 0x38D
+  - wrmsr -p0 0x38D 0
